# titanic

./: .gitignore  .pre-commit-config.yaml  california_housing.py  pyproject.toml  submission.csv  submission_3.csv  titanic_analysis.py  titanic_explore.py  titanic_validation.py
data/: ticket_group_sizes.csv
submissions/: submission_5fix.csv
titanic/: __init__.py  features.py  model.py  notebook.py
