[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Tsvika S <tsvikas@dell>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pre-commit = "^3.1.0"
pytest = "^7.2.0"
pytest-clarity = "^1.0.0"
pytest-cov = "^4.0.0"
pytest-datadir = "^1.4.0"
pytest-pretty = "^1.1.0"
pytest-reverse = "^1.5.0"

[tool.autoflake]
remove-all-unused-imports = true

[tool.isort]
profile = "black"

[tool.poe.tasks]
test = "pytest --cov=pdf_features"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
