[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Tsvika S <tsvikas@dell>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "<1.24"  # 1.24 n.w.w seaborn 0.12.2
python = "~3.10"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
missingno = "^0.5.2"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"
mlxtend = "^0.21.0"
xarray = "^2023.2.0"
optuna = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"
pytest = "^7.2.0"
pytest-clarity = "^1.0.0"
pytest-cov = "^4.0.0"
pytest-datadir = "^1.4.0"
pytest-pretty = "^1.1.0"
pytest-reverse = "^1.5.0"
jupyterlab = "^3.6.1"
jupytext = "^1.14.5"


[tool.poetry.group.typing.dependencies]
mypy = "^1.1.1"
pandas-stubs = "^1.5.3.230304"
typing-extensions = "^4.5.0"

[tool.autoflake]
remove-all-unused-imports = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.poe.tasks]
test = "pytest --cov=pdf_features"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
